--- a/.env
+++ b/.env
@@ -37,3 +37,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID=425235821581008
+FACEBOOK_CLIENT_SECRET=e7368a3574e80588ea5b9ca7a7341512
