--- a/.env
+++ b/.env
@@ -23,12 +23,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -40,3 +35,16 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FACEBOOK_CLIENT_ID=425235821581008
 FACEBOOK_CLIENT_SECRET=e7368a3574e80588ea5b9ca7a7341512
+FACEBOOK_URL=http://localhost:8000/auth/facebook/callback
+
+MAIL_DRIVER=smtp
+
+MAIL_HOST=smtp.gmail.com
+
+MAIL_PORT=587
+
+MAIL_USERNAME=kakoo.ub@gmail.com
+
+MAIL_PASSWORD=barret.50
+
+MAIL_ENCRYPTION=tls
