--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:1FbsfZQboQaxLNliIIO7db/sdn2NzXFL95NfuIkWRHE=
+APP_KEY=base64:K50cKkvUvgBDnHVHI1Ql3+F/MH7eTYHMBaw3n2OUk+o=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -43,8 +43,8 @@ MAIL_HOST=smtp.gmail.com
 
 MAIL_PORT=587
 
-MAIL_USERNAME=kakoo.ub@gmail.com
+MAIL_USERNAME=atamnoreply@gmail.com
 
-MAIL_PASSWORD=barret.50
+MAIL_PASSWORD=nintendoSwitch
 
 MAIL_ENCRYPTION=tls
